Update employee name options in select dropdown

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                         <select name="employeeName" required
                             class="block appearance-none w-full bg-gray-50 border border-gray-300 text-gray-700 py-3 px-4 pr-8 rounded-xl leading-tight focus:outline-none focus:bg-white focus:border-blue-500 transition">
                             <option value="" disabled selected>Choose your name...</option>
-                            <option value="Rahul Sharma">Kareem</option>
-                            <option value="Priya Reddy">Hemant</option>
-                            <option value="Ahmed Khan">Sai Prasad</option>
-                            <option value="Suresh Kumar">Nazeem</option>
-                            <option value="Suresh Kumar">Aravind</option>
+                            <option value="Kareem">Kareem</option>
+                            <option value="Hemant">Hemant</option>
+                            <option value="Sai Prasad">Sai Prasad</option>
+                            <option value="Nazeem">Nazeem</option>
+                            <option value="Aravind">Aravind</option>
 
                         </select>
                         <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
