Replace 'Aravind' option with 'Sai Teja'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <option value="Hemant">Hemant</option>
                             <option value="Sai Prasad">Sai Prasad</option>
                             <option value="Nazeem">Nazeem</option>
-                            <option value="Aravind">Aravind</option>
+                            <option value="Sai Teja">Sai Teja</option>
 
                         </select>
                         <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
